--- a/senior.html
+++ b/senior.html
@@ -166,15 +166,42 @@
   </header>
   <main class="content-block">
    <div class="our-team-content">
+    <div class="our-team-image-column ">
+     <img alt="Stuart Parry" class="img-responsive " src="images/Stuart.png"/>
+    </div>
+    <div class="our-team-text-column text-column">
+     <img class="our-team-text-img" src="images/Stuart.png">
+     <h3>
+      Stuart Parry
+     </h3>
+     <h5>
+      Managing Director
+     </h5>
+     <p>
+      Stuart is an internationally experienced executive, lecturer and Chartered Accountant who has a depth of experience across a wide range of public sector and commercial areas including finance, procurement, risk management and strategy.
+     </p>
+     <p>
+      He has worked as an executive across funds management, financial management and financial accounting in Australia, the US and UK. Prior to establishing his own consultancy Stuart worked as a Chartered Accountant with leading global firms including Ernst &amp; Young, Prudential (UK) Wilhelmsen Investments and Brookfield Asset Management.
+     </p>
+     <p>
+      As an experienced member of international company group audit and risk committees, Stuart has a solid understanding of international finance and accounting issues. He has managed virtual teams focusing on strategic finance and accounting issues for major listed companies in Europe and North America.
+     </p>
+     <p>
+      Stuart holds a Master of Commerce from the University of Sydney and a Bachelor of Commerce (Accounting and Economics) from the University of Queensland.
+     </p>
+   </div>
+   </div>
+   <div class="our-team-content">
     <div class="our-team-image-column">
      <img alt="Peter Morris" class="img-responsive" src="images/Morris.png"/>
     </div>
-    <div class="text-column our-team-text-column">
+    <div class="our-team-text-column text-column">
+     <img class="our-team-text-img" src="images/Morris.png">
      <h3>
       Peter Morris
      </h3>
      <h5>
-      CEO
+      Commercial
      </h5>
      <p>
       Peter has extensive professional experience in senior corporate office and operational roles in multinational companies (Enron Europe, Conoco, BHP Billiton), government and public entities (Queensland Electricity Commission, Queensland Transmission and Supply Corporation) within the energy and mining sectors. His areas of expertise include marketing and trading, customer relationship and market development, contract negotiation, operations and project management, as well as integration of companies, new businesses and strategies.
@@ -189,67 +216,52 @@
    </div>
    <div class="our-team-content">
     <div class="our-team-image-column">
-     <img alt="Kevin Mobbs" class="img-responsive" src="images/Kevin.png"/>
+<!--     <img alt="Ian Connor" class="img-responsive" src="images/Ian.png"/>-->
     </div>
     <div class="text-column our-team-text-column">
      <h3>
-      Kevin Mobbs
+      Peter Briede
      </h3>
      <h5>
-      General Manager of Manufacturing
+      Delivery
      </h5>
      <p>
-      Kevin Mobbs is an experienced Global Executive in the commercial and technical management of large scale and utility grade electrical projects. During his 35 years of experience, Kevin has held Executive roles for Multinational Groups, such as Schneider Electric, and other national groups as CEO, COO in addition to various Directorships.
+      Peter Briede has had a successful career in introducing new technology and solutions into Australia and building the framework for delivery and support it in Australia.
      </p>
      <p>
-      Kevin has built and led experienced executive teams which have successfully established manufacturing and supply chain capabilities for various new products, as well as optimising processes for existing facilities. These products range from customised and complex electrical power systems to high volume electronic based assemblies. Supply chain sourcing and negotiations also form a key part of Kevin's focus and skills to balance the high risk that exists between supply security, quality and cost efficiencies. This experience combined with extensive and real world experience in generation, distribution and the control of electrical infrastructure and power systems, Kevin is a proven leader in building and managing Executive and Professional Teams for delivering successful outcomes.
+      A career electrical engineer with diverse cross-industry experience and proven track record in successful application of electrical engineering, bringing the knowledge and experience but also the necessary attitude and attributes to drive electrical safety, reliability, and compliance.
+     </p>
+     <p>
+      He has extensive experience in the application of electrical engineering across the construction materials, defence, telecommunications, and waste industries with readily transferable and proven experience with the leading aggregates producer in Australia and globally.
+     </p>
+     <p>
+      Peter holds a current Certificate of Registration with Engineers Australia NER and RPEQ.
      </p>
     </div>
    </div>
    <div class="our-team-content">
     <div class="our-team-image-column">
-     <img alt="Peter Matthews" class="img-responsive" src="images/Mathews.png"/>
+     <img alt="Pamela Jones" class="img-responsive" src="images/pamela-cropped.png"/>
     </div>
-    <div class="text-column our-team-text-column">
+    <div class="our-team-text-column text-column">
+     <img class="our-team-text-img" src="images/pamela-cropped.png">
      <h3>
-      Peter Matthews
+      Pamela Jones
      </h3>
      <h5>
-      CEO
+      Financial Control
      </h5>
      <p>
-      With an extensive career in the Electrical installation and Services Industry, Peter is a highly respected and experienced Executive and Innovator. From small beginnings in 2009, with a focus on delivery and quality, Peter has founded and developed the National Deployment and Services company. Solar Service Guys, which is the largest specialist national group of its type.
+      Pamela Jones is an internationally experienced Chartered Accountant who has worked in multiple jurisdictions globally, with 22 years’ experience, of which 18 years has been in Australia and other Asia Pacific regions.
      </p>
      <p>
-      Peter's success can be demonstrated through having National contracts for the provision of specialist electrical services and installations to National Energy Retailers, International Technology Manufacturers and other major industry partners.
+      Pamela has worked as a professional accountant in senior management positions with leading global firms internationally including, Grant Thornton (South Africa), Baker Tilly International (NZ) and in Australia with Hanrick Curran (now Mazars Australia).
      </p>
      <p>
-      Peter has refined his expertise in the Renewables field and has invested into engineering and IT systems. This investment and Leadership has resulted in long term relationships and partnerships with key manufactures including ABB, Canadian Solar, SMA, LG Chem, Trina and national retailing and energy grid clients such as Origin, ERM, Red Energy, Energy Queensland, and Light Source BP. As a highly respected Leader and award-winning Entrepreneur, Peter is a member on the Advisory Board of the Master Electricians of Australia and also advises other major industry groups.
-     </p>
-    </div>
-   </div>
-   <div class="our-team-content">
-    <div class="our-team-image-column">
-     <img alt="Ian Connor" class="img-responsive" src="images/Ian.png"/>
-    </div>
-    <div class="text-column our-team-text-column">
-     <h3>
-      Ian Connor
-     </h3>
-     <h5>
-      Chief Technology Officer (CTO)
-     </h5>
-     <p>
-      Ian is an experienced CTO and entrepreneur. He has spent over 20 years in the USA, Europe and Australia, refining and implementing processes required to build software and manage software teams the right way.
+      Pamela has extensive experience in multiple accounting and tax jurisdictions (at both State and Federal levels).
      </p>
      <p>
-      Previously, Ian was CTO and co-founder of Pubget Inc. based in Boston, USA, a research platform serving researchers and clinicians at over 600 hospitals and research institutions worldwide. Pubget grew from serving local entities, like Harvard University, MIT, and Massachusetts General Hospital - to support various worldwide organizations - from Fortune 500 companies and the top-10 universities to biotechs and individual research groups. The Copyright Clearance Center acquired Pubget.
-     </p>
-     <p>
-      Post-acquisition, Ian moved back to Brisbane, Australia, where he continues to follow test-driven development "TDD" and advocate lean startup methodologies. Ian has also spent over a year as a senior consultant in an electric vehicle charging manufacturing company. The initial goals were around helping increase their velocity and quality through DevOps and Testing. It evolved to include everything from firmware and credit card processing to grid monitoring and power electronics performance and monitoring.
-     </p>
-     <p>
-      Software Skills: Python, C/C++, Tensorflow, AWS, git, DevOps, Typescript, Javascript, Java, and a big fan of continuous integration, testing frameworks, static analysis, electronics, and agile development. Specialties: scientific and artificial intelligence software development. Ian holds degrees in Physics/Maths and Law.
+      Pamela is a Chartered Accountant with Honours Degrees in Accounting, Commerce and Taxation from the University of Exeter (UK) and UNISA (South Africa).
      </p>
     </div>
    </div>
