initial video and solutions page

--- a/solutions.html
+++ b/solutions.html
@@ -167,9 +167,9 @@
    </div>
   </header>
   <main class="content-block">
-   <div class="chemistry-header">
+   <div class="text-column chemistry-header">
     <h1>
-     Environment, Social and Governance
+     Solutions
     </h1>
     <p>
      The modular design of our products allows for ESI to deliver across multiple industry uses:
