menu update and video streaming

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
    </div>
   </header>
   <main class="content-block">
-   <div class="row">
+   <div class="row chemistry-header">
     <div class="col-md-6">
      <p>
       We provide reliable and environmentally friendly
