--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
    </div>
   </header>
   <main class="content-block">
-   <div class="row">
+   <div class="row chemistry-header">
     <div class="col-md-6">
      <p>
       We provide reliable and environmentally friendly
@@ -186,9 +186,15 @@
       By the end of 2026, ESI aims to deliver up to 400 megawatts (MW) of energy storage each year for the next 15 years.
      </p>
     </div>
-    <div class="col-md-6">
-     <img alt="ESI Asia Pacific Pty Ltd" class="img-fluid" src="images/Home-Article.jpg"/>
+    <div class="col-md-6" style="display: flex">
+     <img alt="ESI Asia Pacific Pty Ltd" class="img-fluid home-article" src="images/Home-Article-Cropped.png"/>
     </div>
+   </div>
+   <div class="row">
+    <video class="media-video" controls poster="images/ESI%20corporate%20video%20tile.jpg">
+     <source src="https://dl.dropboxusercontent.com/sh/pfes1cswtg75n36/AACYAScM3YJGq8mQHfWeW-mYa/Corporate%20Video/ESI%20Corporate%20Video.mp4?raw=1">
+     frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen allow="autoplay"
+    </video>
    </div>
   </main>
   <footer>
