border for video

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     </div>
    </div>
    <div class="row">
-    <video class="media-video" controls poster="images/ESI%20corporate%20video%20tile.jpg">
+    <video class="media-video" style='border: 2px solid #f7931c;' controls poster="images/ESI%20corporate%20video%20tile.jpg">
      <source src="https://dl.dropboxusercontent.com/sh/pfes1cswtg75n36/AACYAScM3YJGq8mQHfWeW-mYa/Corporate%20Video/ESI%20Corporate%20Video.mp4?raw=1">
      frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen allow="autoplay"
     </video>
