--- a/index.html
+++ b/index.html
@@ -167,8 +167,7 @@
    </div>
   </header>
   <main class="content-block">
-   <div class="row chemistry-header">
-    <div class="col-md-6">
+   <div class="row chemistry-header" style="text-align: center">
      <p>
       We provide reliable and environmentally friendly
       <strong>
@@ -185,16 +184,20 @@
      <p>
       By the end of 2026, ESI aims to deliver up to 400 megawatts (MW) of energy storage each year for the next 15 years.
      </p>
-    </div>
-    <div class="col-md-6" style="display: flex">
-     <img alt="ESI Asia Pacific Pty Ltd" class="img-fluid home-article" src="images/Home-Article-Cropped.png"/>
-    </div>
    </div>
-   <div class="row">
-    <video class="media-video" style='border: 2px solid #f7931c;' controls poster="images/ESI%20corporate%20video%20tile.jpg">
-     <source src="https://dl.dropboxusercontent.com/sh/pfes1cswtg75n36/AACYAScM3YJGq8mQHfWeW-mYa/Corporate%20Video/ESI%20Corporate%20Video.mp4?raw=1">
-     frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen allow="autoplay"
-    </video>
+   <div class="media-video-small">
+    <iframe style="margin:auto; margin-top: 30px" width="300" height="169" src="https://www.youtube.com/embed/DwZ2jdRH5GI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+   </div>
+   <div class="media-video-medium">
+    <iframe style="margin:auto; margin-top: 30px" width="560" height="315" src="https://www.youtube.com/embed/DwZ2jdRH5GI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+   </div>
+   <div class="media-video-large">
+    <iframe style="margin:auto; margin-top: 30px" width="780" height="440" src="https://www.youtube.com/embed/DwZ2jdRH5GI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+   </div>
+<!--    <video class="media-video" style='border: 2px solid #f7931c;' controls poster="images/ESI%20corporate%20video%20tile.jpg">-->
+<!--     <source src="https://www.youtube.com/embed/DwZ2jdRH5GI">-->
+<!--     frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen allow="autoplay"-->
+<!--    </video>-->
    </div>
   </main>
   <footer>
