--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </script>
   <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet"/>
   <link href="css/main.css" rel="stylesheet"/>
-    <script crossorigin="anonymous" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js">
+  <script crossorigin="anonymous" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js">
   </script>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
@@ -135,7 +135,7 @@
        </ul>
       </li>
       <li class="nav-item">
-       <a class="nav-link btn" href="/news">
+       <a class="nav-link btn" href="press.esiap.com.au">
         News and media
        </a>
       </li>
@@ -168,77 +168,79 @@
   </header>
   <main class="content-block">
    <div class="row chemistry-header" style="text-align: center">
-     <p>
-      We provide reliable and environmentally friendly
-      <strong>
-       renewable energy storage solutions
-      </strong>
-      that are essential for
-      <strong>
-       Australia's transition to a renewable energy future.
-      </strong>
-     </p>
-     <p>
-      Energy Storage Industries - Asia Pacific (ESI) is fully integrated — we manufacture, install, maintain and finance energy storage solutions.
-     </p>
-     <p>
-      By the end of 2026, ESI aims to deliver up to 400 megawatts (MW) of energy storage each year for the next 15 years.
-     </p>
+    <p>
+     We provide reliable and environmentally friendly
+     <strong>
+      renewable energy storage solutions
+     </strong>
+     that are essential for
+     <strong>
+      Australia's transition to a renewable energy future.
+     </strong>
+    </p>
+    <p>
+     Energy Storage Industries - Asia Pacific (ESI) is fully integrated — we manufacture, install, maintain and finance energy storage solutions.
+    </p>
+    <p>
+     By the end of 2026, ESI aims to deliver up to 400 megawatts (MW) of energy storage each year for the next 15 years.
+    </p>
    </div>
    <div class="media-video-small">
-    <iframe style="margin:auto; margin-top: 30px" width="300" height="169" src="https://www.youtube.com/embed/DwZ2jdRH5GI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" frameborder="0" height="169" src="https://www.youtube.com/embed/DwZ2jdRH5GI" style="margin:auto; margin-top: 30px" title="YouTube video player" width="300">
+    </iframe>
    </div>
    <div class="media-video-medium">
-    <iframe style="margin:auto; margin-top: 30px" width="560" height="315" src="https://www.youtube.com/embed/DwZ2jdRH5GI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" frameborder="0" height="315" src="https://www.youtube.com/embed/DwZ2jdRH5GI" style="margin:auto; margin-top: 30px" title="YouTube video player" width="560">
+    </iframe>
    </div>
    <div class="media-video-large">
-    <iframe style="margin:auto; margin-top: 30px" width="780" height="440" src="https://www.youtube.com/embed/DwZ2jdRH5GI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" frameborder="0" height="440" src="https://www.youtube.com/embed/DwZ2jdRH5GI" style="margin:auto; margin-top: 30px" title="YouTube video player" width="780">
+    </iframe>
    </div>
-<!--    <video class="media-video" style='border: 2px solid #f7931c;' controls poster="images/ESI%20corporate%20video%20tile.jpg">-->
-<!--     <source src="https://www.youtube.com/embed/DwZ2jdRH5GI">-->
-<!--     frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen allow="autoplay"-->
-<!--    </video>-->
-   </div>
+   <!--    <video class="media-video" style='border: 2px solid #f7931c;' controls poster="images/ESI%20corporate%20video%20tile.jpg">-->
+   <!--     <source src="https://www.youtube.com/embed/DwZ2jdRH5GI">-->
+   <!--     frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen allow="autoplay"-->
+   <!--    </video>-->
   </main>
-  <footer>
-   <section class="contact">
-    <div class="footer-information">
-     <a class="footer-logo" href="/">
-      <img alt="ESI Asia Pacific Pty Ltd" class="navbar-logo" src="images/ESIAP-Logo-Reversed.png"/>
-     </a>
-     <div class="footer-contacts">
-      <h4 class="contact-text">
-       CONTACT
-      </h4>
-      <div class="icon-row">
-       <i class="material-icons footer-contact-icon">
-        room
-       </i>
-       <p class="ml-2">
-        Brisbane, Australia
-       </p>
-      </div>
-      <div class="icon-row">
-       <i class="material-icons footer-contact-icon">
-        mail
-       </i>
-       <p class="ml-2">
-        info@esiap.com.au
-       </p>
-      </div>
-     </div>
-    </div>
-   </section>
-   <section class="footer-background">
-    <div class="footer navbar-expand-lg navbar">
-     <span class="mr-auto">
-      © 2022 All rights reserved.
-     </span>
-     <a class="footer-icon-container" href="https://twitter.com/ess_info">
-      <img class="footer-icon" src="icons/iconfinder_Circled_Twitter_svg_5279123_blue.png"/>
-     </a>
-    </div>
-   </section>
-  </footer>
  </body>
 </html>
+<footer>
+ <section class="contact">
+  <div class="footer-information">
+   <a class="footer-logo" href="/">
+    <img alt="ESI Asia Pacific Pty Ltd" class="navbar-logo" src="images/ESIAP-Logo-Reversed.png"/>
+   </a>
+   <div class="footer-contacts">
+    <h4 class="contact-text">
+     CONTACT
+    </h4>
+    <div class="icon-row">
+     <i class="material-icons footer-contact-icon">
+      room
+     </i>
+     <p class="ml-2">
+      Brisbane, Australia
+     </p>
+    </div>
+    <div class="icon-row">
+     <i class="material-icons footer-contact-icon">
+      mail
+     </i>
+     <p class="ml-2">
+      info@esiap.com.au
+     </p>
+    </div>
+   </div>
+  </div>
+ </section>
+ <section class="footer-background">
+  <div class="footer navbar-expand-lg navbar">
+   <span class="mr-auto">
+    © 2022 All rights reserved.
+   </span>
+   <a class="footer-icon-container" href="https://twitter.com/ess_info">
+    <img class="footer-icon" src="icons/iconfinder_Circled_Twitter_svg_5279123_blue.png"/>
+   </a>
+  </div>
+ </section>
+</footer>
