--- a/board.html
+++ b/board.html
@@ -135,7 +135,7 @@
        </ul>
       </li>
       <li class="nav-item">
-       <a class="nav-link btn" href="press.esiap.com.au">
+       <a class="nav-link btn" href="https://press.esiap.com.au">
         News and media
        </a>
       </li>
@@ -194,8 +194,7 @@
    </div>
    <div class="our-team-content">
     <div class="our-team-image-column">
-     <img alt="Stuart Parry" class="img-responsive" src="images/Stuart.png">
-     </img>
+     <img alt="Stuart Parry" class="img-responsive" src="images/Stuart.png"/>
     </div>
     <div class="text-column our-team-text-column">
      <img class="our-team-text-img" src="images/Stuart.png"/>
