--- a/contact.html
+++ b/contact.html
@@ -142,7 +142,7 @@
        </ul>
       </li>
       <li class="nav-item">
-       <a class="nav-link btn" href="press.esiap.com.au">
+       <a class="nav-link btn" href="https://press.esiap.com.au">
         News and media
        </a>
       </li>
