--- a/senior.html
+++ b/senior.html
@@ -135,7 +135,7 @@
        </ul>
       </li>
       <li class="nav-item">
-       <a class="nav-link btn" href="press.esiap.com.au">
+       <a class="nav-link btn" href="https://press.esiap.com.au">
         News and media
        </a>
       </li>
@@ -193,8 +193,7 @@
    </div>
    <div class="our-team-content">
     <div class="our-team-image-column">
-     <img alt="Peter Morris" class="img-responsive" src="images/Morris.png">
-     </img>
+     <img alt="Peter Morris" class="img-responsive" src="images/Morris.png"/>
     </div>
     <div class="our-team-text-column text-column">
      <img class="our-team-text-img" src="images/Morris.png"/>
@@ -242,8 +241,7 @@
    </div>
    <div class="our-team-content">
     <div class="our-team-image-column">
-     <img alt="Pamela Jones" class="img-responsive" src="images/pamela-cropped.png">
-     </img>
+     <img alt="Pamela Jones" class="img-responsive" src="images/pamela-cropped.png"/>
     </div>
     <div class="our-team-text-column text-column">
      <img class="our-team-text-img" src="images/pamela-cropped.png"/>
