--- a/maryborough.html
+++ b/maryborough.html
@@ -34,7 +34,7 @@
        </a>
       </li>
       <li class="nav-item dropdown">
-       <a aria-expanded="false" class="nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
+       <a aria-expanded="false" class="about-us nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
         About Us
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
