--- a/senior.html
+++ b/senior.html
@@ -13,7 +13,7 @@
   </script>
   <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet"/>
   <link href="css/main.css" rel="stylesheet"/>
-    <script crossorigin="anonymous" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js">
+  <script crossorigin="anonymous" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js">
   </script>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
@@ -34,7 +34,7 @@
        </a>
       </li>
       <li class="nav-item dropdown">
-       <a aria-expanded="false" class="nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
+       <a aria-expanded="false" class="about-us nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
         About Us
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
@@ -135,7 +135,7 @@
        </ul>
       </li>
       <li class="nav-item">
-       <a class="nav-link btn" href="/news">
+       <a class="nav-link btn" href="https://press.esiap.com.au">
         News and media
        </a>
       </li>
@@ -166,11 +166,11 @@
   </header>
   <main class="content-block">
    <div class="our-team-content">
-    <div class="our-team-image-column ">
-     <img alt="Stuart Parry" class="img-responsive " src="images/Stuart.png"/>
+    <div class="our-team-image-column">
+     <img alt="Stuart Parry" class="img-responsive" src="images/Stuart.png"/>
     </div>
     <div class="our-team-text-column text-column">
-     <img class="our-team-text-img" src="images/Stuart.png">
+     <img class="our-team-text-img" src="images/Stuart.png"/>
      <h3>
       Stuart Parry
      </h3>
@@ -189,14 +189,14 @@
      <p>
       Stuart holds a Master of Commerce from the University of Sydney and a Bachelor of Commerce (Accounting and Economics) from the University of Queensland.
      </p>
-   </div>
+    </div>
    </div>
    <div class="our-team-content">
     <div class="our-team-image-column">
      <img alt="Peter Morris" class="img-responsive" src="images/Morris.png"/>
     </div>
     <div class="our-team-text-column text-column">
-     <img class="our-team-text-img" src="images/Morris.png">
+     <img class="our-team-text-img" src="images/Morris.png"/>
      <h3>
       Peter Morris
      </h3>
@@ -216,7 +216,7 @@
    </div>
    <div class="our-team-content">
     <div class="our-team-image-column">
-<!--     <img alt="Ian Connor" class="img-responsive" src="images/Ian.png"/>-->
+     <!--     <img alt="Ian Connor" class="img-responsive" src="images/Ian.png"/>-->
     </div>
     <div class="text-column our-team-text-column">
      <h3>
@@ -244,7 +244,7 @@
      <img alt="Pamela Jones" class="img-responsive" src="images/pamela-cropped.png"/>
     </div>
     <div class="our-team-text-column text-column">
-     <img class="our-team-text-img" src="images/pamela-cropped.png">
+     <img class="our-team-text-img" src="images/pamela-cropped.png"/>
      <h3>
       Pamela Jones
      </h3>
