--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
   </script>
   <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet"/>
   <link href="css/main.css" rel="stylesheet"/>
-    <script crossorigin="anonymous" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js">
+  <script crossorigin="anonymous" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js">
   </script>
   <script async="" defer="" src="https://www.google.com/recaptcha/api.js">
   </script>
@@ -41,7 +41,7 @@
        </a>
       </li>
       <li class="nav-item dropdown">
-       <a aria-expanded="false" class="nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
+       <a aria-expanded="false" class="about-us nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
         About Us
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
@@ -142,7 +142,7 @@
        </ul>
       </li>
       <li class="nav-item">
-       <a class="nav-link btn" href="/news">
+       <a class="nav-link btn" href="https://press.esiap.com.au">
         News and media
        </a>
       </li>
