--- a/introduction.html
+++ b/introduction.html
@@ -13,7 +13,7 @@
   </script>
   <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet"/>
   <link href="css/main.css" rel="stylesheet"/>
-    <script crossorigin="anonymous" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js">
+  <script crossorigin="anonymous" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js">
   </script>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
@@ -34,7 +34,7 @@
        </a>
       </li>
       <li class="nav-item dropdown">
-       <a aria-expanded="false" class="nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
+       <a aria-expanded="false" class="about-us nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
         About Us
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
@@ -135,7 +135,7 @@
        </ul>
       </li>
       <li class="nav-item">
-       <a class="nav-link btn" href="/news">
+       <a class="nav-link btn" href="https://press.esiap.com.au">
         News and media
        </a>
       </li>
@@ -212,14 +212,14 @@
      Suitable for close-proximity to residential areas as well as in remote and inhospitable conditions.
     </li>
    </ul>
-<!--   <div class="text-column chemistry-header">-->
-<!--    <h3>-->
-<!--     Exceeding the market’s requirements... and expectations-->
-<!--    </h3>-->
-<!--   </div>-->
-<!--   <p>-->
-<!--    ESIAP is transforming the value proposition for long duration energy storage.-->
-<!--   </p>-->
+   <!--   <div class="text-column chemistry-header">-->
+   <!--    <h3>-->
+   <!--     Exceeding the market’s requirements... and expectations-->
+   <!--    </h3>-->
+   <!--   </div>-->
+   <!--   <p>-->
+   <!--    ESIAP is transforming the value proposition for long duration energy storage.-->
+   <!--   </p>-->
   </main>
   <footer>
    <section class="contact">
