--- a/applications.html
+++ b/applications.html
@@ -135,7 +135,7 @@
        </ul>
       </li>
       <li class="nav-item">
-       <a class="nav-link btn" href="https://press.esiap.com.au">
+       <a class="nav-link btn" href="http://press.esiap.com.au">
         News and media
        </a>
       </li>
