--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
 <!--END NAVBAR-->
    <div class="banner-text">
     <div class="row">
-     <div class="col" style="text-align: right; width: 40%; flex: unset">
+     <div class="col banner-logo">
       <img style="padding-right: 30px; margin-left: auto" alt="ESI Asia Pacific Pty Ltd" class="img-fluid" src="images/Home-Logo.png"/>
      </div>
-     <div class="col" style="width: 60%; flex: unset; padding-left: 30px; padding-top: 10px">
+     <div class="col banner-tagline">
       <h1>
        Our renewable
        <br/>
