--- a/contact.html
+++ b/contact.html
@@ -282,10 +282,19 @@
     </div>
     <img alt="ESI Logo" class="img-fluid navbar-icon collapse navbar-collapse" src="images/header-logo.png"/>
    </nav>
-   <div class="banner-text banner-text-contact">
-    <h1>
-     Contact Us
-    </h1>
+   <div class="banner-text">
+    <div class="row">
+     <div class="col banner-logo">
+      <img alt="ESI Asia Pacific Pty Ltd" class="img-fluid" src="images/Home-Logo.png" style="padding-right: 30px; margin-left: auto"/>
+     </div>
+     <div class="col banner-tagline">
+      <h1>
+       Our renewable
+       <br/>
+       energy future — today
+      </h1>
+     </div>
+    </div>
    </div>
   </header>
  </body>
