--- a/technology.html
+++ b/technology.html
@@ -277,10 +277,19 @@
    </nav>
    <header class="banner-technology header">
     <!--        style="padding-bottom: 60px"-->
-    <div class="banner-text banner-text-contact">
-     <h1>
-      ESS Warehouse Technology
-     </h1>
+    <div class="banner-text">
+     <div class="row">
+      <div class="col banner-logo">
+       <img alt="ESI Asia Pacific Pty Ltd" class="img-fluid" src="images/Home-Logo.png" style="padding-right: 30px; margin-left: auto"/>
+      </div>
+      <div class="col banner-tagline">
+       <h1>
+        Our renewable
+        <br/>
+        energy future — today
+       </h1>
+      </div>
+     </div>
     </div>
    </header>
   </header>
