--- a/environment.html
+++ b/environment.html
@@ -277,18 +277,14 @@
    </nav>
    <div class="banner-text">
     <div class="row">
-     <div class="col">
-      <img alt="ESI Asia Pacific Pty Ltd" class="img-fluid" src="images/Home-Logo.png"/>
+     <div class="col banner-logo">
+      <img alt="ESI Asia Pacific Pty Ltd" class="img-fluid" src="images/Home-Logo.png" style="padding-right: 30px; margin-left: auto"/>
      </div>
-     <div class="col">
+     <div class="col banner-tagline">
       <h1>
-       Connect with
-      </h1>
-      <h1>
-       us today!
-      </h1>
-      <h1>
-       — today
+       Our renewable
+       <br/>
+       energy future — today
       </h1>
      </div>
     </div>
