--- a/solutions.html
+++ b/solutions.html
@@ -277,17 +277,14 @@
    </nav>
    <div class="banner-text">
     <div class="row">
-     <div class="col">
-      <img alt="ESI Asia Pacific Pty Ltd" class="img-fluid" src="images/Home-Logo.png"/>
+     <div class="col banner-logo">
+      <img alt="ESI Asia Pacific Pty Ltd" class="img-fluid" src="images/Home-Logo.png" style="padding-right: 30px; margin-left: auto"/>
      </div>
-     <div class="col">
+     <div class="col banner-tagline">
       <h1>
        Our renewable
        <br/>
-       energy future
-      </h1>
-      <h1>
-       — today
+       energy future — today
       </h1>
      </div>
     </div>
