--- a/blank.html
+++ b/blank.html
@@ -299,25 +299,26 @@
       <img alt="ESI Asia Pacific Pty Ltd" class="navbar-logo" src="images/ESIAP-Logo-Reversed.png"/>
      </a>
      <div class="footer-contacts">
-      <h4 class="contact-text">
-       CONTACT
-      </h4>
-      <div class="icon-row">
-       <i class="material-icons footer-contact-icon">
-        room
-       </i>
-       <p class="ml-2">
-        Brisbane, Australia
-       </p>
+      <h3 class="contact-text">
+       Stay up to date and follow us
+      </h3>
+      <div class="footer-icon-container contact-text">
+       <a href="https://twitter.com/ESIAsiaPacific">
+        <img class="footer-icon" src="icons/2021%20Twitter%20logo%20-%20white.png"/>
+       </a>
+       <a href="https://facebook.com/ESIAsiaPacific">
+        <img class="footer-icon" src="icons/f_logo_RGB-White_512.png"/>
+       </a>
+       <a href="https://www.linkedin.com/company/81527417">
+        <img class="footer-icon" src="icons/In-White-128.png"/>
+       </a>
       </div>
-      <div class="icon-row">
-       <i class="material-icons footer-contact-icon">
-        mail
-       </i>
-       <p class="ml-2">
-        info@esiap.com.au
-       </p>
-      </div>
+      <br/>
+      <a class="footer-contact-us" href="/contact">
+       <h3 class="contact-text">
+        Contact Us
+       </h3>
+      </a>
      </div>
     </div>
    </section>
@@ -326,9 +327,6 @@
      <span class="mr-auto">
       © 2022 All rights reserved.
      </span>
-     <a class="footer-icon-container" href="https://twitter.com/ess_info">
-      <img class="footer-icon" src="icons/iconfinder_Circled_Twitter_svg_5279123_blue.png"/>
-     </a>
     </div>
    </section>
   </footer>
