initial rss feed hhhhhh need a proxy

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
   <script defer="" src="js/sidebar.js">
   </script>
+   <script src="js/rss-feed.js"> </script>
   <link href="/favicon.png" rel="icon"/>
  </head>
  <body>
