removed defunct townsville page and updated news feed spacing

--- a/contact.html
+++ b/contact.html
@@ -134,15 +134,8 @@
           Maryborough
          </a>
         </li>
-        <li>
-         <div class="dropdown-divider">
-         </div>
-        </li>
-        <li>
-         <a class="dropdown-item btn btn-sub" href="/townsville">
-          Townsville
-         </a>
-        </li>
+        <!--        <li><div class="dropdown-divider"></div></li>-->
+        <!--        <li><a class="dropdown-item btn btn-sub" href="/townsville">Townsville</a></li>-->
        </ul>
       </li>
       <li class="nav-item">
@@ -255,15 +248,8 @@
           Maryborough
          </a>
         </li>
-        <li>
-         <div class="dropdown-divider">
-         </div>
-        </li>
-        <li>
-         <a class="dropdown-item btn btn-sub" href="/townsville">
-          Townsville
-         </a>
-        </li>
+        <!--         <li><div class="dropdown-divider"></div></li>-->
+        <!--         <li><a class="dropdown-item btn btn-sub" href="/townsville">Townsville</a></li>-->
        </ul>
       </li>
       <li class="nav-item">
