--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
   <script defer="" src="js/sidebar.js">
   </script>
-<!--   <script src="js/rss-feed.js"> </script>-->
+  <!--   <script src="js/rss-feed.js"> </script>-->
   <link href="/favicon.png" rel="icon"/>
  </head>
  <body>
@@ -130,15 +130,8 @@
           Maryborough
          </a>
         </li>
-        <li>
-         <div class="dropdown-divider">
-         </div>
-        </li>
-        <li>
-         <a class="dropdown-item btn btn-sub" href="/townsville">
-          Townsville
-         </a>
-        </li>
+        <!--        <li><div class="dropdown-divider"></div></li>-->
+        <!--        <li><a class="dropdown-item btn btn-sub" href="/townsville">Townsville</a></li>-->
        </ul>
       </li>
       <li class="nav-item">
@@ -251,15 +244,8 @@
           Maryborough
          </a>
         </li>
-        <li>
-         <div class="dropdown-divider">
-         </div>
-        </li>
-        <li>
-         <a class="dropdown-item btn btn-sub" href="/townsville">
-          Townsville
-         </a>
-        </li>
+        <!--         <li><div class="dropdown-divider"></div></li>-->
+        <!--         <li><a class="dropdown-item btn btn-sub" href="/townsville">Townsville</a></li>-->
        </ul>
       </li>
       <li class="nav-item">
@@ -295,7 +281,8 @@
    </div>
   </header>
   <main class="content-block">
-   <div class="row chemistry-header" style="text-align: center">
+   <div class="row" style="text-align: left">
+    <!--    <div></div>-->
     <p>
      We provide reliable and environmentally friendly
      <strong>
@@ -325,8 +312,12 @@
     <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" frameborder="0" height="440" src="https://www.youtube.com/embed/1BH4u7y8HsU" style="margin:auto; margin-top: 30px" title="YouTube video player" width="780">
     </iframe>
    </div>
-   <div id="flockler-embed-1827343613409ce62cd5d4e9fc68cb00"></div>
-<script src="https://plugins.flockler.com/embed/182733e15910a126432935ff4ee5c9f4/1827343613409ce62cd5d4e9fc68cb00" async></script>
+   <div class="news-feed">
+    <div id="flockler-embed-1827343613409ce62cd5d4e9fc68cb00">
+    </div>
+    <script async="" src="https://plugins.flockler.com/embed/182733e15910a126432935ff4ee5c9f4/1827343613409ce62cd5d4e9fc68cb00">
+    </script>
+   </div>
    <!--    <video class="media-video" style='border: 2px solid #f7931c;' controls poster="images/ESI%20corporate%20video%20tile.jpg">-->
    <!--     <source src="https://www.youtube.com/embed/DwZ2jdRH5GI">-->
    <!--     frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen allow="autoplay"-->
