environment page rework

--- a/environment.html
+++ b/environment.html
@@ -277,36 +277,39 @@
    </div>
   </header>
   <main class="content-block">
-   <div class="environment-header">
+   <div class="text-column chemistry-header">
     <h1>
      Environment, Social and Governance
     </h1>
    </div>
-   <div class="row">
-    <div class="col-md-4">
-     <img alt="Solar Power" class="img-responsive" src="images/About-Solar.svg" style="max-width: 137px;"/>
+   <div class="our-team-content">
+    <div class="our-team-image-column our-team-image-column-env">
+     <img alt="Solar Power" class="img-responsive" src="images/About-Solar.svg"/>
     </div>
-    <div class="col-md-8 environment-text">
+    <div class="text-column our-team-text-column">
+     <img class="our-team-text-img" alt="Solar Power" src="images/About-Solar.svg"/>
      <p>
       ESI products are completely sustainable and 100 per cent recyclable. The iron flow batteries have a 10 to 14-hour storage capacity and 25 year lifecycle. The environmentally friendly electrolyte also means that the product is ideally suited to remote locations such as the National Parks and the Great Barrier Reef.
      </p>
     </div>
    </div>
-   <div class="row">
-    <div class="col-md-4">
-     <img alt="Handshake" class="img-responsive" src="images/About-Handshake.svg" style="max-width: 137px;"/>
+   <div class="our-team-content">
+    <div class="our-team-image-column our-team-image-column-env">
+     <img alt="Handshake" class="img-responsive" src="images/About-Handshake.svg"/>
     </div>
-    <div class="col-md-8 environment-text">
+    <div class="text-column our-team-text-column">
+     <img class="our-team-text-img" alt="Handshake" src="images/About-Handshake.svg"/>
      <p>
-      ESI provides a significant social and economic boost to the Australian community. Initially, we are investing up to $70 million to build a manufacturing hub in Maryborough. When fully operational in 2026, ESI we will have up to 500 highly skilled employees and contractors working at our  facilities throughout regional Queensland.
+      ESI provides a significant social and economic boost to the Australian community. Initially, we are investing up to $70 million to build a manufacturing hub in Maryborough. An economic impact assessment conducted by leading professional services firm EY shows that ESI’s operations will boost Gross State Product (GSP) by $676 million over the first 20 years of operation, with the majority of that benefit occurring in the first five years. When fully operational in 2026, ESI we will have up to 500 highly skilled employees and contractors working at our facilities throughout regional Queensland.
      </p>
     </div>
    </div>
-   <div class="row">
-    <div class="col-md-4">
-     <img alt="About Team" class="img-responsive" src="images/About-Team.svg" style="max-width: 137px;"/>
+   <div class="our-team-content">
+    <div class="our-team-image-column our-team-image-column-env">
+     <img alt="About Team" class="img-responsive" src="images/About-Team.svg"/>
     </div>
-    <div class="col-md-8 environment-text">
+    <div class="text-column our-team-text-column">
+     <img class="our-team-text-img" alt="About Team" src="images/About-Team.svg"/>
      <p>
       ESI is run by a board and executive team that has decades of experience in the energy, manufacturing, technology and finance sectors. Importantly, they have a deep, end-to-end understanding of the energy value chain from technical operation of assets to energy trading.
      </p>
