--- a/careers.html
+++ b/careers.html
@@ -277,7 +277,7 @@
    </div>
   </header>
   <main class="content-block">
-   <div class="environment-header">
+   <div class="text-column chemistry-header">
     <h1>
      Careers
     </h1>
@@ -289,10 +289,7 @@
     </p>
     <p>
      If you are interested to work for ESI, please
-     <a href="/contact">
-      contact us
-     </a>
-     .
+     <a href="/contact">contact us</a>.
     </p>
    </div>
   </main>
