--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,8 @@
   <link href="css/main.css" rel="stylesheet"/>
   <script crossorigin="anonymous" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js">
   </script>
-  <script defer="" src="js/sidebar.js"></script>
+  <script defer="" src="js/sidebar.js">
+  </script>
   <script async="" defer="" src="https://www.google.com/recaptcha/api.js">
   </script>
   <script>
@@ -92,8 +93,8 @@
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
         <li>
-         <a class="dropdown-item btn btn-sub" href="/introduction">
-          Introduction
+         <a class="dropdown-item btn btn-sub" href="/our-batteries">
+          Our Batteries
          </a>
         </li>
         <li>
@@ -206,8 +207,8 @@
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
         <li>
-         <a class="dropdown-item btn btn-sub" href="/introduction">
-          Introduction
+         <a class="dropdown-item btn btn-sub" href="/our-batteries">
+          Our Batteries
          </a>
         </li>
         <li>
