--- a/environment.html
+++ b/environment.html
@@ -15,7 +15,8 @@
   <link href="css/main.css" rel="stylesheet"/>
   <script crossorigin="anonymous" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js">
   </script>
-  <script defer="" src="js/sidebar.js"></script>
+  <script defer="" src="js/sidebar.js">
+  </script>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
   <link href="/favicon.png" rel="icon"/>
@@ -85,8 +86,8 @@
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
         <li>
-         <a class="dropdown-item btn btn-sub" href="/introduction">
-          Introduction
+         <a class="dropdown-item btn btn-sub" href="/our-batteries">
+          Our Batteries
          </a>
         </li>
         <li>
@@ -199,8 +200,8 @@
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
         <li>
-         <a class="dropdown-item btn btn-sub" href="/introduction">
-          Introduction
+         <a class="dropdown-item btn btn-sub" href="/our-batteries">
+          Our Batteries
          </a>
         </li>
         <li>
@@ -288,7 +289,7 @@
      <img alt="Solar Power" class="img-responsive" src="images/About-Solar.svg"/>
     </div>
     <div class="text-column our-team-text-column">
-     <img class="our-team-text-img" alt="Solar Power" src="images/About-Solar.svg"/>
+     <img alt="Solar Power" class="our-team-text-img" src="images/About-Solar.svg"/>
      <p>
       ESI products are completely sustainable and 100 per cent recyclable. The iron flow batteries have a 10 to 14-hour storage capacity and 25 year lifecycle. The environmentally friendly electrolyte also means that the product is ideally suited to remote locations such as the National Parks and the Great Barrier Reef.
      </p>
@@ -299,7 +300,7 @@
      <img alt="Handshake" class="img-responsive" src="images/About-Handshake.svg"/>
     </div>
     <div class="text-column our-team-text-column">
-     <img class="our-team-text-img" alt="Handshake" src="images/About-Handshake.svg"/>
+     <img alt="Handshake" class="our-team-text-img" src="images/About-Handshake.svg"/>
      <p>
       ESI provides a significant social and economic boost to the Australian community. Initially, we are investing up to $70 million to build a manufacturing hub in Maryborough. An economic impact assessment conducted by leading professional services firm EY shows that ESI’s operations will boost Gross State Product (GSP) by $676 million over the first 20 years of operation, with the majority of that benefit occurring in the first five years. When fully operational in 2026, ESI we will have up to 500 highly skilled employees and contractors working at our facilities throughout regional Queensland.
      </p>
@@ -310,7 +311,7 @@
      <img alt="About Team" class="img-responsive" src="images/About-Team.svg"/>
     </div>
     <div class="text-column our-team-text-column">
-     <img class="our-team-text-img" alt="About Team" src="images/About-Team.svg"/>
+     <img alt="About Team" class="our-team-text-img" src="images/About-Team.svg"/>
      <p>
       ESI is run by a board and executive team that has decades of experience in the energy, manufacturing, technology and finance sectors. Importantly, they have a deep, end-to-end understanding of the energy value chain from technical operation of assets to energy trading.
      </p>
