--- a/our-batteries.html
+++ b/our-batteries.html
@@ -15,7 +15,8 @@
   <link href="css/main.css" rel="stylesheet"/>
   <script crossorigin="anonymous" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js">
   </script>
-  <script defer="" src="js/sidebar.js"></script>
+  <script defer="" src="js/sidebar.js">
+  </script>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
   <link href="/favicon.png" rel="icon"/>
@@ -85,8 +86,8 @@
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
         <li>
-         <a class="dropdown-item btn btn-sub" href="/introduction">
-          Introduction
+         <a class="dropdown-item btn btn-sub" href="/our-batteries">
+          Our Batteries
          </a>
         </li>
         <li>
@@ -199,8 +200,8 @@
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
         <li>
-         <a class="dropdown-item btn btn-sub" href="/introduction">
-          Introduction
+         <a class="dropdown-item btn btn-sub" href="/our-batteries">
+          Our Batteries
          </a>
         </li>
         <li>
@@ -290,42 +291,42 @@
     <h3>
      Battery Capability
     </h3>
+    <ul>
+     <li>
+      6 - 14 Hours Energy Storage
+     </li>
+     <li>
+      Module design allows for 400KWh to 1GWh+ installation
+     </li>
+     <li>
+      20,000+ cycling capability with no degradation regardless of duty cycle
+     </li>
+     <li>
+      25+ year lifetime
+     </li>
+     <li>
+      Munich RE 10 year warranty
+     </li>
+     <li>
+      Wide operating range - 5°C to 50°C
+     </li>
+     <li>
+      Non-toxic, non-flammable, 100% recyclable
+     </li>
+     <li>
+      No toxicity, fire, chemical or explosion risk
+     </li>
+     <li>
+      No precious metals, materials or hard to source components
+     </li>
+     <li>
+      Energy can be stored charged for extended periods and not lose charge
+     </li>
+     <li>
+      Suitable for close-proximity to residential areas as well as in remote and inhospitable conditions.
+     </li>
+    </ul>
    </div>
-   <ul>
-    <li>
-     6 - 14 Hours Energy Storage
-    </li>
-    <li>
-     Module design allows for 400KWh to 1GWh+ installation
-    </li>
-    <li>
-     20,000+ cycling capability with no degradation regardless of duty cycle
-    </li>
-    <li>
-     25+ year lifetime
-    </li>
-    <li>
-     Munich RE 10 year warranty
-    </li>
-    <li>
-     Wide operating range - 5°C to 50°C
-    </li>
-    <li>
-     Non-toxic, non-flammable, 100% recyclable
-    </li>
-    <li>
-     No toxicity, fire, chemical or explosion risk
-    </li>
-    <li>
-     No precious metals, materials or hard to source components
-    </li>
-    <li>
-     Energy can be stored charged for extended periods and not lose charge
-    </li>
-    <li>
-     Suitable for close-proximity to residential areas as well as in remote and inhospitable conditions.
-    </li>
-   </ul>
    <!--   <div class="text-column chemistry-header">-->
    <!--    <h3>-->
    <!--     Exceeding the market’s requirements... and expectations-->
