--- a/maryborough.html
+++ b/maryborough.html
@@ -17,6 +17,8 @@
   </script>
   <script defer="" src="js/sidebar.js">
   </script>
+  <script defer="" src="js/slides.js">
+  </script>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
   <link href="/favicon.png" rel="icon"/>
@@ -279,10 +281,41 @@
    </div>
   </header>
   <main class="content-block">
-   <div class="chemistry-header">
-    <h1>
-     Coming Soon
-    </h1>
+   <div style="width: 80%; margin: auto">
+<!--    <div class="text-column chemistry-header">-->
+<!--    </div>-->
+    <div class="text-column" >
+     <div class="chemistry-header">
+      <h1>
+       Maryborough
+      </h1>
+     </div>
+     <img src="images/Sod%20Turning%201.jpg" alt="Sod Turning" style="width: 100%; margin-left: auto; margin-right: auto"/>
+     <p>
+      Work on our $70 million Maryborough facility officially started on Wednesday, 6 July 2022.
+     </p>
+     <p>
+      Deputy Premier the Hon Dr Steven Miles MP, State Member for Maryborough Bruce Saunders MP, Fraser Coast Regional Council Mayor Cr George Seymour and Butchulla elder Eleanor Currie were on hand to officiate at a sod turning ceremony to mark the start of construction.
+     </p>
+     <p>
+      Once complete in 2024, the Maryborough facility will manufacture and distribute iron flow batteries that allow large-scale energy storage for wholesale electricity generators, energy retailers, and commercial and industrial customers.
+     </p>
+     <div class="slide-container" style="margin-left: auto; margin-right: auto">
+        <span class="prev banner-button event-button" onclick="plusSlide(-1)">&#10094;</span>
+        <img class="event-slide" src="/images/ESI%20-%20Maryborough%20facility%201.jpg" alt="Maryborough Facility 1"/>
+        <img class="event-slide" src="/images/ESI%20-%20Maryborough%20facility%202.jpg" alt="Maryborough Facility 2"/>
+        <img class="event-slide" src="/images/ESI%20-%20Maryborough%20facility%203.jpg" alt="Maryborough Facility 3"/>
+        <span class="next banner-button event-button" onclick="plusSlide(1)">&#10095;</span>
+    </div>
+    <div style="text-align:center; margin-top: -26px; margin-bottom: 30px">
+        <span style="padding: 2px; border-radius: 5px; background-color: rgba(0,0,0,.5);">
+            <span class="event-dot" onclick="currentSlide(1)"></span>
+            <span class="event-dot" onclick="currentSlide(2)"></span>
+            <span class="event-dot" onclick="currentSlide(3)"></span>
+        </span>
+    </div>
+ <!--    <img alt="Features and advantages" class="img-fluid" src="images/Energy-Transition.png"/>-->
+    </div>
    </div>
   </main>
   <footer>
